TEST_PROGRAMS/VALID/05/extra_terminating_whitespace.go
/* Extra terminating white-space.  */

package main

type x int         

type point struct {

	y int    
	z float64



}

func main() {   
	var a x = 0
}   
