TEST_PROGRAMS/INVALID/05/dangling_top_expr.go
/* Dangling top-level expression. */

package main

var x, y int = 0x40, 1

y / x

func main() {

}
